--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-    <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>XSMART</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<script language="javascript" type="text/javascript" src="START_LOAD.js"></script>
-	</head>
-	<body onload="LOAD.onLoad();" onunload="MAIN.onUnload();" onkeyup="KEY.load(event);">
-		<a href="javascript:void(0);" id="anchor"></a>
-		<div id='load_logo'>
-			<div class='load_pulse1'></div>
-			<div class='load_pulse2'></div>
-			<div class='load_icon'></div>
-			<div id='load_txt' class='load_txt'></div>
-		</div>
-    </body>
-</html>
+hello
