--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>XSMART</title>
+        <script>window.location="http://app.xsmart.tv";</script>
+    </head>
+    <body>
+    </body>
+</html>
