--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script>alert("123");window.location="http://app.xsmart.tv/";</script>
+        <script>alert(window.location.toString());window.location="http://app.xsmart.tv/";</script>
     </head>
     <body></body>
 </html>
