--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 	<body>
 		<script>
 		var url = "http://app.xsmart.tv/";
-			document.body.innerHTML='<iframe id="xFrame" style="width:100%;height:100%;top:0;left:0;z-index:999;" src="'+url+'" scrolling="no" ></iframe>'
-			window.frames.xFrame.focus();
-
+		window.location.origin = "http://app.xsmart.tv/";
 		</script>
     </body>
 </html>
