--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<script>
 		var url = "http://app.xsmart.tv/";
-		window.location.origin = "http://app.xsmart.tv/";
+		document.location = "http://app.xsmart.tv/";
 		</script>
     </body>
 </html>
