--- a/index.html
+++ b/index.html
@@ -1,26 +1,210 @@
-<!DOCTYPE html>
+
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <title>XSMART</title>
+    <head>
+		<title>XSMART</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8">
-
-    // Wait for device API libraries to load
-    //
-    document.addEventListener("deviceready", onDeviceReady, false);
-
-    // device APIs are available
-    //
-    function onDeviceReady() {
-        // external url
-        var ref = window.open(encodeURI('http://app.xsmart.tv'), '_blank', 'location=yes');
-        // relative document
-       // ref = window.open('http://app.xsmart.tv', '_self');
-    }
-
-    </script>
-  </head>
-  <body>
-  </body>
+		<meta http-equiv="Content-Type" 	content="text/html; charset=utf-8" />
+		<meta name="referrer"				content="never"/>
+		<meta name="description" 			content="all in one" />
+		<meta name="author" 				content="XSMART GROUP © JasonX, Lestat, Dronbi4." />
+		
+		<!-- APPLE -->
+		<link rel="apple-touch-icon" 					href="http://app.xsmart.tv/images/icons/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="76x76" 		href="http://app.xsmart.tv/images/icons/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="120x120" 	href="http://app.xsmart.tv/images/icons/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="152x152" 	href="http://app.xsmart.tv/images/icons/apple-touch-icon-152x152.png" />
+	
+        <script language="javascript"  type="text/javascript">
+			if(/Opera|OPR/.test(navigator.userAgent)){document.write("<link rel=\"icon\" type=\"image\/jpg\" href=\"images/icons/opera-speeddial.jpg\"/>");};
+		</script>
+		<!-- Style sheets code -->
+		<link rel="index" 			title="XSMART" 			href="http://app.xsmart.tv/"/>
+		<link rel="shortcut icon" 	type="image/x-icon" 	href="http://app.xsmart.tv/favicon.ico" />
+		<link rel="icon" 			type="image/x-icon" 	href="http://app.xsmart.tv/favicon.ico" />
+		<link rel="stylesheet" 		type="text/css"			href="http://app.xsmart.tv/css/fonts.css"/>
+		<link rel="stylesheet" 		type="text/css"			href="http://app.xsmart.tv/css/styles.css?v=1583702494"/>
+		
+		<script	type="text/javascript"	src="http://app.xsmart.tv/app_store/build_app/index.php?v=1638311133"	></script>
+		
+	</head>
+	<body onunload="onUnload();" onkeydown="Keyboard(event);">
+		<div id="IFRAME" style="position:absolute;display:none;background-color:#000000;top:0;left:0;width:100%;height:100%;overflow:hidden;"></div>
+		<div id="BODY">
+			<a href="javascript:void(0);" id="anchor"></a>
+			<img id="HttpRequest" style="position:absolute;opacity:0.0;background-color:#000000;top:-1px;left:-1px;width:0px;height:0px;"></img>
+			<div id="loading_logo" class="loading_logo">
+					<div class="load_logo"></div>
+					<div class="load_anim"></div>
+					<div id="load_txt"></div>
+				</div>			<div id="loading" class="loading"></div>
+			
+			<div id="info_msg_upd" class="info_msg_upd" >
+				<img src="images/player_info.png" class="list_img info_msg_upd_img"></img>
+				<div id="info_msg_upd_text" ></div>
+			</div>
+			<div id="msg_info" class="msg_info" ></div>
+			<div id="console" class="console" ></div>
+			<div id="INFO_MSG" class="info" >
+				<div id="INFO_MSG_block" class="info_msg" >
+					<div id="INFO_MSG_head" class="info_head" ></div>
+					<div id="INFO_MSG_txt" class="info_txt" ></div>
+					<div id="INFO_MSG_buttom" class="info_buttom_line info_buttom_line_a" ></div>
+				</div>
+				<div class="film_name_black2" style="background-color:rgba(41,47,55,0.90);z-index:501;" ></div>
+			</div>
+			<!-- VOLUME -->
+			<div id="volume"  >
+				<div id="volume_name" ></div>
+				<div id="volume_line" ><div id="volume_line_a" ></div></div>
+				<div id="volume_proc" ></div>
+			</div>
+			<!-- KEYBOARD -->
+			<div id="keyboard" style="display:none;" >
+				<div  class="key_line" >
+					<div id="quick_line" class="quick_line" ></div>
+					<div id="key_line_name_0" class="key_line_txt_name" ></div>
+					<input id="key_line_0" class="key_line_txt" type="text" ></input>
+				</div>
+				<div  id="key_line_a_1" class="key_line" style="display:none;" >
+					<div id="key_line_name_1" class="key_line_txt_name" ></div>
+					<input id="key_line_1" class="key_line_txt" type="text" ></input>
+				</div>
+				<div  id="keyboard_id" class="keyboard" ></div>
+			</div>
+			<!-- MENU -->
+			<div id="bd" >
+				<div id="time" class="time" >00:00</div>
+				<div id="left_menu" class="left_menu background is-active" >
+					<div class="c-hamb" >
+						<div class="c-hamb black" ></div>
+						<div id="menu_aur" style="display:block;" class="menu_aur btn background_fff" onmouseover="LEFT_MENU.index=-1;LEFT_MENU.init();" onclick="MODE='LEFT_MENU';Keyboard('KEY_ENTER')" ></div>
+						<div id="menu_login" style="display:none;" class="login" onmouseover="LEFT_MENU.index=-1;LEFT_MENU.init();" onclick="MODE='LEFT_MENU';Keyboard('KEY_ENTER')" >
+							<div id="menu_login_img" class="login_img" ></div>
+							<div id="menu_login_txt" class="login_txt" ></div>
+						</div>
+						<div id="c-hamburger" class="c-hamburger c-hamburger--htx is-active" onclick="left_m(this)"><span></span></div>
+					</div>
+					<div id="left_menu_icon" class="left_menu_icon" ></div>		
+					<div id="left_menu_inf" class="left_menu_inf" onmouseover="LEFT_MENU.index=10;LEFT_MENU.init();" onclick="MODE='LEFT_MENU';Keyboard('KEY_ENTER')" >
+						<div class="c-hamb black2" ></div>
+						<div class="icon_i" ><div class="icon_m icon_inf" ></div>
+							<div id="menu_info" class="icon_i_t icon_i_tt" ></div>
+						</div>
+					</div>
+					<div id="left_menu_set" class="left_menu_set" onmouseover="LEFT_MENU.index=11;LEFT_MENU.init();" onclick="MODE='LEFT_MENU';Keyboard('KEY_ENTER')" >
+						<div class="c-hamb black" ></div>
+						<div class="icon_i" ><div class="icon_m icon_set" ></div>
+							<div id="menu_set" class="icon_i_t icon_i_tt" ></div>
+						</div>				
+					</div>
+				</div>
+				<div id="box_zal" style="display:none;" class="box_film box_zal" >
+					<div id="box_zal_0" class="box_film_0 box_zal_0" ></div>
+					<div id="box_zal_1" class="box_film_1 box_zal_1" ></div>
+				</div>
+				<div id="box_film" style="display:none;" class="box_film" >
+					<div id="box_film_0" class="box_film_0" ></div>
+					<div id="box_film_1" class="box_film_1" ></div>			
+				</div>
+				<div id="box_play" style="display:none;" class="box_film box_play" >
+					<div id="play_star" class="play_star"></div>
+					<div class="cover_play" ><div id="noposter_play" class="noposter_play" ></div><div id="cover_play" class="film_img"></div ></div>
+					<div class="desc_play" ><div class="desc_sh" ></div><div id="desc_txt" class="desc_txt" ></div></div>
+					<div id="play_bootom" class="play_btm"></div>
+				</div>
+				<div id="box_line" style="display:none;" class="box_film box_line" >
+					<div class="line_head">
+						<img id="line_head_img" src="" class="line_head_img"></img><div id="line_head" class="line_head_name"></div>
+						<!-- AUDIO_PLAYER -->
+						<div id="a_player_mini">
+							<img id="a_player_mini_cover" src="" class="line_head_img a_player_img"></img>
+							<img id="a_player_mini_stop" src="images/player_stop.png" onclick="A_PLAYER.stop();" class="line_head_img a_player_img"></img><img id="a_player_mini_play" src="images/player_pause.png" onclick="A_PLAYER.PausePlay();" class="line_head_img a_player_img" ></img><img id="a_player_mini_load" src="images/mini_load.svg" class="line_head_img a_player_img" ></img>
+							<div id="a_player_mini_name" class="player_title_name a_player_name"></div>
+						</div>
+						<!--  -->
+					</div>
+					<div id="line_list_0" class="line_list"></div>
+					<div id="line_list_1" class="line_list"></div>
+					<div id="line_list_2" class="line_list"></div>
+					<div id="line_list_descr" class="line_list_descr"></div>
+				</div>
+				<div id="top_sh" class="top_sh" >
+					<div class="box_shadow_up" onclick="Keyboard('KEY_UP')"><div class="box_shadow_up_a"><div class="box_shadow_up_b"></div></div></div>
+					<div id="category" class="inthis" style="display:none;"></div>
+				</div>
+				<div id="janr" class="janr" ><div class="film_name_black2" style="background-color:rgba(41,47,55,0.95);z-index:205;" ></div>
+					<div class="c-hamburger c-hamburger--htx is-active" onclick="JANR_MENU.key('KEY_RETURN');"><span></span></div>
+					<div class="janr_cat">
+						<div id="janr_cat_title" class="janr_cat_title"></div>
+					</div>
+					<div id="janr_cat janr_a" class="janr_cat janr_a"></div>
+				</div>
+				<div id="helpbar" class="helpbar"></div>
+				<div id="bot_sh" class="bot_sh" >
+					<div class="box_shadow_down" onclick="Keyboard('KEY_DOWN')"><div class="box_shadow_down_a"><div class="box_shadow_down_b"></div></div></div>				
+				</div>
+			</div>
+			<!-- PLAYER -->
+			<div id="player" onmouseover="DISPLAY.player_init('mouse');" onclick="DISPLAY.player_init('mouse');" >
+				<div	id="player_media"	class="media" style="display:none;" ></div>
+				<div	id="player_error"	class="media" style="display:none;" >
+					<div class="error"><div class="error_plus error_plus_sh">+</div></div>
+					<div id="player_error_title" class="error_title"></div>
+				</div>
+				<div id="player_ff"  >
+					<div id="player_ff_top" ></div>
+					<div id="player_ff_line" ><div id="player_ff_line_a" class="player_ff_line_left" ></div></div>
+					<div id="player_ff_bot" ></div>
+				</div>
+				<div id="player_display"  >
+					<div class="player_title">
+						<div id="play_time" class="time" >00:00</div>
+						<div id="play_size_hd" class="play_size_hd" >SD</div>
+						<div class="opt_black"></div>
+						<div id="player_title_img" class="player_title_img"></div>
+						<div id="player_title_name" class="player_title_name"></div>
+					</div>
+					<div class="player_menu">
+						<div class="opt_black0"></div>
+						<div id="rew_time" class="rew_time">00:00</div>
+						<div id="line_time_a" class="line_time"><div id="line_time" class="line_time_a"></div></div>
+						<div id="player_button_line" class="player_button_line"></div>
+					</div>
+				</div>
+				<div id="player_vast" >
+					<div class="vast_t"><div id="vast_time" class="vast_time">00</div></div>
+					<div id="vast_enter" class="vast_enter" onclick="Keyboard('KEY_ENTER');"></div>
+					<div class="player_line_vast">
+						<div id="vast_line_time_a" class="line_time"><div id="vast_line_time" class="line_time_a"></div></div>
+					</div>
+				</div>
+				<div id="player_left_menu" class="player_left_menu">
+					<div id="player_left_menu_title" class="player_left_menu_title"></div>
+					<div id="player_left_menu_list" class="player_left_menu_list"></div>
+				</div>
+				<div id="player_size" class="info" >
+					<div id="player_size_block" class="info_msg info_msg_b" >
+						<div id="player_size_head" class="info_head" ></div>
+						<div id="player_size_txt" class="info_txt" ></div>
+					</div>
+				</div>
+			</div>
+			<!-- JAVASCRIPT -->
+			<script>var SELLER="";var Page_W_H="";var key_hash="1f659fc7e399f066ebe590fbcf2c7f9a";</script>
+<script	type="text/javascript"	src="http://app.xsmart.tv/libs/json.min.js"	></script>
+<script	type="text/javascript"	src="http://app.xsmart.tv/libs/jquery.js"	></script>
+<script	type="text/javascript"	src="http://app.xsmart.tv/libs/jquery.cookie.js"	></script>
+<script	type="text/javascript"	src="http://app.xsmart.tv/api/?key=1f659fc7e399f066ebe590fbcf2c7f9a&mode=js_dev&type=.js"	></script>
+<script> LOAD.mode="dev";
+						//LOAD.MAC="0026AA01CEB2";</script><script> onLoad(); </script>			<script>
+				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+				ga('create', 'UA-81217941-3', 'auto');
+				ga('send', 'pageview');
+			</script>
+		</div>
+    </body>
 </html>
