--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 
 <!DOCTYPE HTML>
 <html>
-    <head>
+   	 <head>
 		<title>XSMART</title>
+		<script>alert(window.location.toString())</script>
 	</head>
-	<body>
-
-    	</body>
+	<body></body>
 </html>
