--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<script src="cordova.js"></script>
 	</head>
 	<body>
+		<script>
 	document.addEventListener("deviceready", onDeviceReady, false);
 		function onDeviceReady() {
   		  alert("device.cordova"+device.cordova);
 	}
-	
+	</script>
 	
 	
 	</body>
