--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 		<script src="cordova.js"></script>
 	</head>
 	<body>
-		<script>
-	document.addEventListener("deviceready", onDeviceReady, false);
+	<iframe id="xFrame" style="width:100%;height:100%;top:0;left:0;z-index:999;" src="http://app.xsmart.tv/" scrolling="no" ></iframe>
+	<script>
+		//document.addEventListener("deviceready", onDeviceReady, false);
 		function onDeviceReady() {
-  		  alert("device.cordova"+device.cordova);
-	}
+  			 //alert("device.cordova"+device.cordova);
+		}
+		
 	</script>
 	
 	
