--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 	<iframe id="xFrame" style="width:100%;height:100%;top:0;left:0;z-index:999;" src="http://app.xsmart.tv/" scrolling="no" ></iframe>
 	<script>
+		window.frames.xFrame.focus();
 		//document.addEventListener("deviceready", onDeviceReady, false);
 		function onDeviceReady() {
   			 //alert("device.cordova"+device.cordova);
