--- a/index.html
+++ b/index.html
@@ -5,17 +5,8 @@
 		<title>XSMART</title>
 		<script src="cordova.js"></script>
 	</head>
-	<body>
-	<iframe id="xFrame" style="width:100%;height:100%;top:0;left:0;z-index:999;" src="http://app.xsmart.tv/" scrolling="no" ></iframe>
-	<script>
-		window.frames.xFrame.focus();
-		//document.addEventListener("deviceready", onDeviceReady, false);
-		function onDeviceReady() {
-  			 //alert("device.cordova"+device.cordova);
-		}
-		
-	</script>
-	
-	
+	<body style="position:absolute;width:100%;height:100%;top:0;left:0;">
+		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;" src="http://app.xsmart.tv/" scrolling="no" ></iframe>
+		<script>window.frames.xFrame.focus();</script>
 	</body>
 </html>
