--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="cordova.js"></script>
 	</head>
 	<body style="position:absolute;width:100%;height:100%;top:0;left:0;">
-		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;" src="http://app.xsmart.tv/" scrolling="no" ></iframe>
+		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;" src="http://app.xsmart.tv/" frameborder="0" scrolling="no" ></iframe>
 		<script>window.frames.xFrame.focus();</script>
 	</body>
 </html>
