--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
 <!DOCTYPE HTML>
 <html>
    	 <head>
 		<title>XSMART</title>
 		<script src="cordova.js"></script>
 	</head>
-	<body style="position:absolute;width:100%;height:100%;top:0;left:0;">
-		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;" src="http://app.xsmart.tv/" frameborder="0" scrolling="no" ></iframe>
+	<body style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;">
+		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;" src="http://app.xsmart.tv/" frameborder="0" scrolling="no" ></iframe>
 		<script>window.frames.xFrame.focus();</script>
 	</body>
 </html>
