--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script src="cordova.js"></script>
 	</head>
 	<body style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;">
-		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;" src="http://app.xsmart.tv/" frameborder="0" scrolling="no" ></iframe>
-		<script>window.frames.xFrame.focus();</script>
+		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;" src="http://app.xsmart.tv/" onLoad="IFRAMEonLoad()" frameborder="0" scrolling="no" ></iframe>
+		<script> function IFRAMEonLoad(a){document.getElementById("xFrame").contentWindow.KeyHandler("8");} window.frames.xFrame.focus();</script>
 	</body>
 </html>
