--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	</head>
 	<body style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;">
 		<iframe id="xFrame" style="position:absolute;width:100%;height:100%;top:0;left:0;margin:0;" src="http://app.xsmart.tv/" onLoad="IFRAMEonLoad()" frameborder="0" scrolling="no" ></iframe>
-		<script> function IFRAMEonLoad(a){document.getElementById("xFrame").contentWindow.VIVAT.init();} window.frames.xFrame.focus();</script>
+		<script> 
+			function IFRAMEonLoad(a){
+				navigator.Backbutton.goBack(function() { document.getElementById("xFrame").contentWindow.KeyHandler("KEY_RETURN"); }, function() {alert('fail')});
+			} 
+			window.frames.xFrame.focus();
+		</script>
 	</body>
 </html>
