--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<script>
 			var device_a="?model="+device.model+"&mac="+device.uuid+"&serial="+device.serial;
+			alert(device_a);
 			window.location = "http://app.xsmart.tv/"+device_a;
 		</script>
 	</body>
